# deps_jansson

./: CMakeLists.txt
resources/jansson_24_cmake/: CMakeLists.txt
